# mia

./: .gitignore  README.md  config.json  pyproject.toml  settings.json
face/: CMakeLists.txt
face/src/: animations.hpp  graphics.hpp  input.hpp  main.cpp  nanovg_gl_impl.cpp  renderer.hpp
face/test/: playsound.py
src/face/: CMakeLists.txt
src/face/src/: main.cpp  nats.hpp  renderer.hpp
src/frontend/: README.md  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.vue  main.ts  style.css
src/frontend/src/components/: FileNavigator.vue
src/frontend/src/services/: configuration.ts  http.ts
src/frontend/src/types/: configuration.ts
src/frontend/src/views/: RobotConfigurationView.vue
src/mia/: __init__.py
src/mia/_lib/: build.py  configuration.py  files.py  languages.py  settings.py
src/mia/api/: __init__.py  _main.py  dependencies.py
src/mia/api/routers/: configuration.py  files.py
src/mia/core/: _main.py  bus.py  config.py  face.py  llm.py  nlp.py  pipeline.py  stt.py  supervisor.py  tts.py
test/: start_dev_components.py  test_audio_input.py  test_piper.py  test_whisper.py
test/mia/core/: test_interaction.py  test_nlp.py
